Version 0.7: Not yet released.
 * Fix bug in chest break protection
 * Implement a more stringent and specific ACL
 * Conversation-based ACL controls
 * Permissions can control chest limits

Version 0.6.2: 2013-02-04
 * Play nice with SignThatChest by allowing signs right in front of a chest.

Version 0.6.1: 2012-09-21
 * Allow setting maximum number of MondoChests per player.

Version 0.6: 2012-08-22
 * Add ability to define the users who can access a MondoChest
 * Add in MCStats metrics.
 * Allow access to 'mondo' command from console (limited use)
 * Add in optional protection on opening a chest
 * Add optional ability to find slaves 2 away horizontally.
 * Fix minor bug with not removing chest if slaves_vertical_two was set
 * Tested on Bukkit 1.3.1

Version 0.5.5: 2012-08-05
 * Fix bug where you right click a new master and it doesn't register for
   adding slaves till you right click it again.

Version 0.5.4: 2012-07-05
 * Add optional ability to find slaves 2 away from a sign

Version 0.5.3: 2012-05-12
 * Add new /mondo find command
 * Remove deprecated search radius
 * Make various performance settings more configurable
 * Remove a lot of old code and general code cleanup
 * This is the first version which no longer supports Bukkit 1.1

Version 0.5.2: 2012-04-03
 * Fix bug where master signs pick up chests 2 away from the sign, not just adjacent.
 * Performance improvements: Use O(1) datastructure for slave operations.
 * Strategies for more compact config
 * Any parsing errors causes an automatic backup of banks.yml

Version 0.5.1: 2012-04-01
 * Fix bug where a master can contain the same chest again as a slave

Version 0.5: 2012-03-29
 * Support Vault permissions
 * Radius is deprecated
 * MondoChests have "owners"
 * Slave signs add to the last clicked chest
 * Multiple chests per item type
 * Optional sign protection
   * Only owners can break signs
   * Break signs to remove slaves / entire mondochests.
 * pretty message coloring