@@ -4,7 +4,7 @@ import us.crast.mondochest.util.ChatMagic;
 
 public final class MondoConstants {
 	public static final String APP_NAME = "MondoChest";
-	public static final String MONDOCHEST_VERSION = "0.7-pre2";
+	public static final String MONDOCHEST_VERSION = "0.7-pre3";
 	
 	public static final String MASTER_SIGN_NAME = "[MondoChest]";
 	public static final String SLAVE_SIGN_NAME = "[MondoSlave]";
