@@ -3,6 +3,7 @@ Version 0.7: Not yet released.
  * Implement a more stringent and specific ACL
  * Conversation-based ACL controls
  * Permissions can control chest limits
+ * Deal smartly with adding duplicate chests
 
 Version 0.6.2: 2013-02-04
  * Play nice with SignThatChest by allowing signs right in front of a chest.
